--- a/avenue/markup/assets/less/vars.less
+++ b/avenue/markup/assets/less/vars.less
@@ -1,11 +1,15 @@
 // main: style.less
 
 // COLORS
-@clr_light_black: #333;
+@clr_black: #000;
+@clr_light_black: #222;
+@clr_lightest_black: #333;
 @clr_white: #fff;
-@clr_grey: #999;
-@clr_cyan: #00c8c8;
 @clr_dark_white: #f8f8f8;
+@clr_grey: #999;
+@clr_dark_grey: #737373;
+@clr_darkest_grey: #454647;
+@clr_cyan: #00c8c8;
 
 // FONTS
-@fnt_montserrat: "Montserrat", sans-serif;
+@fnt_main: "Montserrat", sans-serif;
